--- a/.github/workflows/azure-webapps-node.yml
+++ b/.github/workflows/azure-webapps-node.yml
@@ -18,11 +18,15 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '14'
-
+          
+      - name: Install npm packages, build, and test
+        run: |
+          npm install
+          npm run build --if-present
+          
       - name: List contents of the zip file
         run: unzip -l release.zip
         working-directory: ${{ github.workspace }}
-
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
