--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "fccclone",
   "version": "1.0.0",
-  "description": "NA",
-  "main": "server.js",
+  "description": "A clone of an app",
+  "main": "server.js",  
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js"  
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^4.4.0",
+    "uuid": "^8.3.2"
   },
+  "engines": {
+    "node": ">=14.0.0" 
+  },
+  "devDependencies": {},
+  "author": "xaman27x",
+  "license": "MIT"
+}
